fixed type with visibility

--- a/styles.css
+++ b/styles.css
@@ -265,10 +265,11 @@ a {
     border-radius: 50%;
 }
 
+    /* box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);  */
 
 
 /* Modal */
-  .modal {
+   .modal {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -276,14 +277,14 @@ a {
     width: 90%;
     max-width: 1100px;
     height: 700px;
-    /* box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);  */
     border-radius: 20px;
     overflow: hidden;
     display: flex;
     visibility: hidden;
     z-index: -1;
-    transition: visbility 1s, z-index 1s, box-shadow 0.5s ease; 
-  }  
+    transition: visibility 1s, z-index 1s, box-shadow 0.5s ease; 
+  }   
+
 
 
 .modal--open .modal {
